stoat/src/snapshots/stoat__test_harness__nested_splits.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: ctrl-v
focused: #3 of 3
mode: normal
size: 80x24
---
[0m[38;2;198;199;201m[48;2;40;44;52m [0m[38;2;84;93;111m[48;2;40;44;52m1[0m[38;2;198;199;201m[48;2;40;44;52m [0m[38;2;84;93;111m[48;2;40;44;52m│[0m[38;2;198;199;201m[48;2;40;44;52m                                   [0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;198;199;201m[48;2;40;44;52m [0m[38;2;84;93;111m[48;2;40;44;52m1[0m[38;2;198;199;201m[48;2;40;44;52m [0m[38;2;84;93;111m[48;2;40;44;52m│[0m[38;2;198;199;201m[48;2;40;44;52m                                    [0m
[0m[38;2;198;199;201m[48;2;40;44;52m                                       [0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;198;199;201m[48;2;40;44;52m                                        [0m
[0m[38;2;198;199;201m[48;2;40;44;52m                                       [0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;198;199;201m[48;2;40;44;52m                                        [0m
[0m[38;2;198;199;201m[48;2;40;44;52m                                       [0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;198;199;201m[48;2;40;44;52m                                        [0m
[0m[38;2;198;199;201m[48;2;40;44;52m                                       [0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;198;199;201m[48;2;40;44;52m                                        [0m
[0m[38;2;198;199;201m[48;2;40;44;52m                                       [0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;198;199;201m[48;2;40;44;52m                                        [0m
[0m[38;2;198;199;201m[48;2;40;44;52m                                       [0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;198;199;201m[48;2;40;44;52m                                        [0m
[0m[38;2;198;199;201m[48;2;40;44;52m                                       [0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;198;199;201m[48;2;40;44;52m                                        [0m
[0m[38;2;198;199;201m[48;2;40;44;52m                                       [0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;198;199;201m[48;2;40;44;52m                                        [0m
[0m[38;2;198;199;201m[48;2;40;44;52m                                       [0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;198;199;201m[48;2;40;44;52m                                        [0m
[0m[38;2;198;199;201m[48;2;40;44;52m                                       [0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;99;109;131m[48;2;40;44;52m [scratch] ──────────────────────── 1:1 [0m
[0m[38;2;198;199;201m[48;2;40;44;52m                                       [0m[38;2;86;182;194m[48;2;40;44;52m│────────────────────────────────────────[0m
[0m[38;2;198;199;201m[48;2;40;44;52m                                       [0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                    [0m
[0m[38;2;198;199;201m[48;2;40;44;52m                                       [0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;198;199;201m[48;2;40;44;52m                                       [0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;198;199;201m[48;2;40;44;52m                                       [0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;198;199;201m[48;2;40;44;52m                                       [0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;198;199;201m[48;2;40;44;52m                                       [0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;198;199;201m[48;2;40;44;52m                                       [0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;198;199;201m[48;2;40;44;52m                                       [0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;198;199;201m[48;2;40;44;52m                                       [0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;198;199;201m[48;2;40;44;52m                                       [0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;198;199;201m[48;2;40;44;52m                                       [0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;99;109;131m[48;2;40;44;52m [scratch] ─────────────────────── 1:1 [0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;40;44;52m[48;2;97;175;239m NOR [0m[38;2;250;250;250m[48;2;99;109;131m (unnamed) [scratch] [0m[38;2;99;109;131m[48;2;99;109;131m─────────[0m[38;2;250;250;250m[48;2;99;109;131m 1:1 [0m
