stoat/src/snapshots/stoat__test_harness__open_two_files.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: open_file
focused: #2 of 2
mode: normal
size: 80x24
---
┌─────────────────────────────────────┐ ┌──────────────────────────────────────┐
│file A                               │ │file B                                │
│                                     │ │                                      │
│                                     │ │                                      │
│                                     │ │                                      │
│                                     │ │                                      │
│                                     │ │                                      │
│                                     │ │                                      │
│                                     │ │                                      │
│                                     │ │                                      │
│                                     │ │                                      │
│                                     │ │                                      │
│                                     │ │                                      │
│                                     │ │                                      │
│                                     │ │                                      │
│                                     │ │                                      │
│                                     │ │                                      │
│                                     │ │                                      │
│                                     │ │                                      │
│                                     │ │                                      │
│                                     │ │                                      │
│                                     │ │                                      │
│                                     │ │                                      │
└─────────────────────────────────────┘ └──────────────────────────────────────┘
