stoat/src/snapshots/stoat__test_harness__palette_arg_preview_highlighted_after_parse.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: one_frame
focused: #1 of 1
mode: insert
size: 120x16
---
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                                                    [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m[38;2;99;109;131m[48;2;40;44;52m┌ open ────────────────────────────────────────────────────────────────────────┐[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;229;192;123m[48;2;40;44;52m:[0m[38;2;250;250;250m[48;2;40;44;52m o [0m[7m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;250;250;250m[48;2;40;44;52m                                                [0m[38;2;99;109;131m[48;2;40;44;52m┌ palette ───────────────────────────────────┐[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m[38;2;99;109;131m[48;2;40;44;52m│─────────────────────────────────────────────────────│─[0m[38;2;86;182;194m[48;2;40;44;52m  Up, C-p[0m[38;2;250;250;250m[48;2;40;44;52m   previous picker row            [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m aaa.rs                        [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[1m[38;2;97;175;239m[48;2;40;44;52mfn[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;229;192;123m[48;2;40;44;52mzzz[0m[38;2;171;178;191m[48;2;40;44;52m()[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;110;213;222m[48;2;40;44;52m->[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52mu32[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;171;178;191m[48;2;40;44;52m{[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;198;120;221m[48;2;40;44;52m0[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;171;178;191m[48;2;40;44;52m}[0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m  Dn, C-n[0m[38;2;250;250;250m[48;2;40;44;52m   next picker row                [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;40;44;52m[48;2;86;182;194m zzz.rs                        [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                     [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m     A-Up[0m[38;2;250;250;250m[48;2;40;44;52m   recall older prompt history    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                               [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                     [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m     A-Dn[0m[38;2;250;250;250m[48;2;40;44;52m   recall newer prompt history    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                               [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                     [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52mC-f, PgDn[0m[38;2;250;250;250m[48;2;40;44;52m   page the picker down           [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                               [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                     [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52mC-b, PgUp[0m[38;2;250;250;250m[48;2;40;44;52m   page the picker up             [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                               [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                     [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m      C-d[0m[38;2;250;250;250m[48;2;40;44;52m   scroll the picker preview down [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                               [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                     [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m      C-u[0m[38;2;250;250;250m[48;2;40;44;52m   scroll the picker preview up   [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                               [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                     [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m      Tab[0m[38;2;250;250;250m[48;2;40;44;52m   complete from the picker       [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m[38;2;99;109;131m[48;2;40;44;52m└─────────────────────────────────────────────────────│─[0m[38;2;86;182;194m[48;2;40;44;52m    S-Tab[0m[38;2;250;250;250m[48;2;40;44;52m   toggle command palette scope   [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                          [0m[38;2;99;109;131m[48;2;40;44;52m└────────────────────────────────────────────┘[0m
[0m[38;2;40;44;52m[48;2;152;195;121m INS [0m[38;2;250;250;250m[48;2;99;109;131m stoat-palette-test [scratch] [0m[38;2;99;109;131m[48;2;99;109;131m────────────────────────────────────────────────────────────────────────────────[0m[38;2;250;250;250m[48;2;99;109;131m 1:1 [0m
