stoat/src/snapshots/stoat__test_harness__permission_prompt_modal.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: snapshot
focused: #1 of 1
mode: normal
size: 80x24
---
[0m[7m [0m




     [0m[38;2;197;134;192m┌ permission required ───────────────────────────────────────────────┐[0m
     [0m[38;2;197;134;192m│[0m[38;2;220;220;170mTool: Bash[0m                                                          [0m[38;2;197;134;192m│[0m
     [0m[38;2;197;134;192m│[0m[38;2;128;128;128mInput:[0m                                                              [0m[38;2;197;134;192m│[0m
     [0m[38;2;197;134;192m│[0m[38;2;204;204;204m{"command": "cargo install ripgrep"}[0m                                [0m[38;2;197;134;192m│[0m
     [0m[38;2;197;134;192m│[0m                                                                    [0m[38;2;197;134;192m│[0m
     [0m[38;2;197;134;192m│[0m                                                                    [0m[38;2;197;134;192m│[0m
     [0m[38;2;197;134;192m│[0m                                                                    [0m[38;2;197;134;192m│[0m
     [0m[38;2;197;134;192m│[0m                                                                    [0m[38;2;197;134;192m│[0m
     [0m[38;2;197;134;192m│[0m                                                                    [0m[38;2;197;134;192m│[0m
     [0m[38;2;197;134;192m│[0m                                                                    [0m[38;2;197;134;192m│[0m
     [0m[38;2;197;134;192m│[0m[38;2;128;128;128m--------------------------------------------------------------------[0m[38;2;197;134;192m│[0m
     [0m[38;2;197;134;192m│[0m[38;2;204;204;204m Allow [0m [0m[30m[48;2;79;193;255m Allow-once [0m [0m[38;2;204;204;204m Always-allow [0m [0m[38;2;204;204;204m Deny [0m                          [0m[38;2;197;134;192m│[0m
     [0m[38;2;197;134;192m└─────────────────────────────────────────────────[0m[38;2;220;220;170m┌ permission ───────────┐[0m
                                                       [0m[38;2;220;220;170m│[0m[38;2;79;193;255m      Tab[0m[38;2;204;204;204m   next button[0m[38;2;220;220;170m│[0m
                                                       [0m[38;2;220;220;170m│[0m[38;2;79;193;255mShift-Tab[0m[38;2;204;204;204m   prev button[0m[38;2;220;220;170m│[0m
                                                       [0m[38;2;220;220;170m│[0m[38;2;79;193;255m    Enter[0m[38;2;204;204;204m   select[0m     [0m[38;2;220;220;170m│[0m
                                                       [0m[38;2;220;220;170m│[0m[38;2;79;193;255m      Esc[0m[38;2;204;204;204m   deny[0m       [0m[38;2;220;220;170m│[0m
                                                       [0m[38;2;220;220;170m└───────────────────────┘[0m
[0m[1m[30m[48;2;86;156;214m NOR [0m[1m[38;2;204;204;204m[48;2;30;30;30m (unnamed) [0m[38;2;204;204;204m[48;2;30;30;30m[scratch]                                                   1:1 [0m
